# templ-rs

./: Cargo.toml  index.templ
examples/: filters.tpl  inheritance.tpl  literals.tpl  simple.tpl  tags.tpl  whitespace.tpl
templ/: Cargo.toml
templ-ast/: Cargo.toml
templ-ast/src/: ast.rs  lib.rs  types.rs
templ-cli/: Cargo.toml
templ-cli/src/: main.rs
templ-parser/: Cargo.toml  simple.tpl
templ-parser/src/: error.rs  grammar.rs  lib.rs  visitor.rs
templ-parser/tests/: literal.rs
templ-runtime/: Cargo.toml
templ-runtime/src/: error.rs  lib.rs  runtime.rs  value.rs
templ-runtime/src/filters/: mod.rs
templ-vm/: Cargo.toml
templ-vm/benches/: render.rs  tera.tpl
templ-vm/src/: error.rs  lib.rs  template.rs  vm.rs
templ-vm/src/compiler/: chunk.rs  constant.rs  error.rs  mod.rs  opcode.rs  parse.rs  visitor.rs
templ/src/: filters.rs  lib.rs
xtask/: Cargo.toml
xtask/definitions/: enums.ron  expressions.ron  op-codes.ron  statements.ron
xtask/src/: ast.rs  main.rs  opcode.rs
xtask/templates/: ast.tera  opcode.tera  visitor.tera
